--- a/.github/workflows/sync-files.yml
+++ b/.github/workflows/sync-files.yml
@@ -18,7 +18,7 @@ jobs:
         chmod +x $GITHUB_WORKSPACE/scripts/*.sh
         $GITHUB_WORKSPACE/scripts/sync-istoreos-files.sh
 
-    - name: 自动发布固件到 Releases
+    - name: 自动发布资源到 Releases
       uses: softprops/action-gh-release@v2
       with:
         tag_name: "iStoreosFile"
